# telegram_notification_bot

./: .gitignore  Dockerfile  README.md  bot_commands.md  docker-compose.debug.yml  docker-compose.yml  docker.env  main.py  pyproject.toml
modules/: __init__.py  binance_api_handler.py  poll_handler.py  rules_logic.py
modules/aiogram_modules/: aiogram_app.py  aiogram_message_interface.py  message_handler.py
modules/api_modules/: db_routes.py  fast_api_app.py  metadata.py  util_routes.py  uvicorn_config.py
modules/api_modules/db_api/: crud.py  database.py  models.py  schemas.py
modules/utils/: text_formatters.py  util_classes.py
