[tool.poetry]
name = "telegram_notification_bot"
version = "0.1.0"
description = ""
authors = ["WildElaeagnus <54314123+akorzunin@users.noreply.github.com>"]

[tool.poetry.dependencies]
# python = "^3.9"
python = ">=3.9,<3.10"
pandas = "^1.4.2"
python-dotenv = "^0.20.0"
asyncio = "^3.4.3"
fastapi = "^0.75.2"
aiogram = "^2.20"
uvicorn = "^0.17.6"
nest-asyncio = "^1.5.5"
python-binance = "^1.0.16"
SQLAlchemy = "^1.4.35"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
isort = "^5.10.1"
ipykernel = "^6.13.0"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
